test/tests/compiler/6_statements_and_conditional_expressions/valid/extra_credit/whitespace_after_label.plx



pub fn main(none) i32 {
    jump label2
    return 0
    #  okay to have space or newline between label and colon
    label label1
    label label2

    return 1
}
