test/tests/compiler/6_statements_and_conditional_expressions/invalid_parse/extra_credit/plx1_jump_with_block.plx
pub fn main(none) i32 {
    jump lbl {
        label lbl
    }
    return 0
}
